[package]
name = "jira_git_helper"
version = "0.1.0"
authors = ["Your Name <your.email@example.com>"]
edition = "2021"
description = "A CLI tool to automate Git commit messages with JIRA integration"
license = "MIT"
repository = "https://github.com/yourusername/jira_git_helper"
homepage = "https://github.com/yourusername/jira_git_helper"
documentation = "https://docs.rs/jira_git_helper"
readme = "README.md"

[dependencies]
reqwest = { version = "0.11", features = ["json", "gzip"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.5"
rpassword = "5.0"
dirs = "4.0"
base64 = "0.13"
ring = "0.16.20"
tokio = { version = "1", features = ["full"] }

[package.metadata.docs.rs]
features = ["json"]

[[bin]]
name = "jira_git_helper"
path = "src/main.rs"
