[package]
name = "jira_git_helper"
version = "0.1.0"
edition = "2021"
authors = ["Yvan Yang <zjlgdx@gmail.com>"]
description = "A tool to automate JIRA-related Git commit tasks"
license = "MIT"
repository = "https://github.com/YYvanYang/jira_git_helper"
readme = "README.md"
keywords = ["jira", "git", "automation", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
tokio = { version = "1.28", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.13"
thiserror = "1.0"
anyhow = "1.0"
regex = "1.8"
lazy_static = "1.4"
ring = "0.16"
base64 = "0.21"
dirs = "5.0"
toml = "0.7"
clap = { version = "4.3", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
rpassword = "7.2"

[dev-dependencies]
mockito = "1.1"
tempfile = "3.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'

[lib]
name = "jira_git_helper"
path = "src/lib.rs"

[[bin]]
name = "jira_git_helper"
path = "src/main.rs"